Bug Fix - Footer Spacer Alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -174,6 +174,7 @@ footer {
 .footer-spacer {
     width: 80%;
     height: 50px;
+    margin: 0 auto;
     background-color: #303030;
 }
 
